# Ericsson_2020_unagi

./: .gitignore  CMakeLists.txt  DisplayInfo.hpp  Reader.cpp  Reader.h  Solver.cpp  Solver.h  Solver_finished_functions.cpp  connector.h  console_connector.h  main.cpp  platform_dep.h  solver1_move_vaccine.cpp  solver2_healing.cpp  solver3_cleaned_back.cpp  solver4_infection.cpp  solver5_vaccine_production.cpp  solver_export_json.cpp
displays/: Display.html  asd.html
documentation/: README.md
nodejs-server/: GameDisplay.js  app.js  package-lock.json  package.json
path_finder/: CMakeLists.txt  main.cpp
socket-connector/: main.cpp  socket_connector.h
win32-draw/: Canvas.cpp  Draw.cpp  Draw.hpp
